--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/mongodb": "^3.6.20",
+    "autoprefixer": "^10.3.1",
+    "bcrypt": "^5.0.1",
+    "joi": "^17.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.0.1",
     "next": "11.0.1",
+    "postcss": "^8.3.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-customerly": "^2.0.0",
+    "react-dom": "17.0.2",
+    "react-reveal": "^1.2.2",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/react": "17.0.15",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
