--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@types/mongodb": "^3.6.20",
     "autoprefixer": "^10.3.1",
     "bcrypt": "^5.0.1",
+    "i18next": "^20.3.5",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.1",
     "next": "11.0.1",
     "postcss": "^8.3.6",
     "react": "17.0.2",
-    "react-customerly": "^2.0.0",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.11.4",
     "react-reveal": "^1.2.2",
     "tailwindcss": "^2.2.7"
   },
