--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
     "@types/mongodb": "^3.6.20",
     "autoprefixer": "^10.3.1",
     "bcrypt": "^5.0.1",
+    "dot": "^1.1.3",
     "i18next": "^20.3.5",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.1",
+    "nanoid": "^3.1.25",
     "next": "11.0.1",
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.11.4",
     "react-reveal": "^1.2.2",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "ts-mailgun": "^0.5.1"
   },
   "devDependencies": {
+    "@types/dot": "^1.1.4",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/node": "^16.6.1",
     "@types/react": "17.0.15",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
