--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.3.1",
     "bcrypt": "^5.0.1",
     "dot": "^1.1.3",
+    "framer-motion": "^4.1.17",
     "i18next": "^20.3.5",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
@@ -24,7 +25,6 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.11.4",
-    "react-reveal": "^1.2.2",
     "tailwindcss": "^2.2.7",
     "ts-mailgun": "^0.5.1"
   },
