--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/mongodb": "^3.6.20",
     "autoprefixer": "^10.3.1",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "dot": "^1.1.3",
     "framer-motion": "^4.1.17",
@@ -25,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.11.4",
+    "react-toastify": "^8.0.2",
     "tailwindcss": "^2.2.7",
     "ts-mailgun": "^0.5.1"
   },
